deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gozar-controlled-demo
  labels:
    app.kubernetes.io/part-of: gozar-gorz
    gozar.pirbod.com/scope: controlled-demo
