deploy/kubernetes/gorz-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gorz-api
  namespace: gozar-controlled-demo
spec:
  type: ClusterIP
  selector:
    app: gorz-api
  ports:
    - name: http
      port: 8090
      targetPort: http
