deploy/kubernetes/profile-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profile-api
  namespace: gozar-controlled-demo
spec:
  type: ClusterIP
  selector:
    app: profile-api
  ports:
    - name: http
      port: 8095
      targetPort: http
